update disposal pdf

--- a/AssetManagementSystem.PL/Views/Asset/Index.cshtml
+++ b/AssetManagementSystem.PL/Views/Asset/Index.cshtml
@@ -500,7 +500,7 @@ AST004⟶AST005"></textarea>
                     <div class="row mb-4">
                         <div class="col-md-6">
                             <label class="form-label fw-bold">نوع التكهين</label>
-                            <input type="text" id="disposalType" class="form-control" required placeholder="-- ادخل النوع --">
+                            <input type="text" id="disposalType" class="form-control" required placeholder="  ادخل النوع  ">
                             <div class="invalid-feedback">يرجى ادخال نوع التكهين</div>
                         </div>
                         <div class="col-md-6">
@@ -513,17 +513,8 @@ AST004⟶AST005"></textarea>
                         </div>
                     </div>
                     
-                    <div class="mb-3">
-                        <label class="form-label fw-bold">سبب التكهين</label>
-                        <textarea id="disposalReason" class="form-control" rows="3" 
-                                  placeholder="أدخل سبب التكهين بالتفصيل"></textarea>
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label class="form-label fw-bold">ملاحظات إضافية</label>
-                        <textarea id="disposalNotes" class="form-control" rows="2"
-                                  placeholder="أي ملاحظات إضافية (اختياري)"></textarea>
-                    </div>
+                   
+               
                     
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="generateDocument" checked>
